--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -1,5 +1,5 @@
 // SCREEN SIZES
-$screen-sm: 576px;
-$screen-md: 768px;
-$screen-lg: 992px;
-$screen-xl: 1200px;
+$screen-xs: 576px;
+$screen-sm: 768px;
+$screen-md: 992px;
+$screen-lg: 1200px;
